# Connect4

./: .coveragerc  .pylintrc  Game.py  README.md  pyproject.toml
.github/workflows/: main.yml
Dokumentaatio/: Käyttöohje.md  Määrittelydokumentti  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Työtunnit.md  Viikkoraportit
Dokumentaatio/Viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: alustava_pelipohja.py  luokka_kiekon_sijotus.py  luokka_nakyma.py  luokka_paras_siirto.py  luokka_ratkaiseva_sijotus.py  luokka_tulos.py  main.py  minimax.py  pelin_alustukset.py  pelipohja.py
src/tests/: game_test.py  kiekon_sijotus_test.py  minimax_test.py  nakyma_test.py  paras_siirto_test.py  pelin_alustukset_test.py  pelipohja_test.py  ratkaiseva_sijotus_test.py  tulos_test.py
